--- a/git_config/.gitconfig
+++ b/git_config/.gitconfig
@@ -8,3 +8,5 @@
 [alias]
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 	ck = checkout
+	st = status
+	br = branch
